--- a/src/main/resources/locales/mes_en.properties
+++ b/src/main/resources/locales/mes_en.properties
@@ -9,7 +9,6 @@ clientIndex.downloading=Downloading
 client.uploading.title="Unloading" service registration page
 client.carNumber=Car registration number
 client.phoneNumber=Phone number
-client.orderNumber=Order number
 client.registrationBtn=Registration
 client.backToOperationSelBtn=Back to operation selection 
 client.downloading.title="Downloading" service registration page
@@ -53,10 +52,9 @@ dataOperation.message=Message:
 dataOperation.from=From:
 dataOperation.to=To:
 dataOperation.uploadBtn=Upload
-login.error=Invalid username or password!
-login.logoutSuccess=You've been logged out successfully.
+login.error=ERROR! Invalid username or password!
+login.logoutSuccess=You've been logged out successfully!
 order.success=Data was downloaded succesfully!
-order.unsuccess=ERROR! File extantion could be .xls or .xlsx
 order.error=ERROR! Data wasn't download
 client=Client
 operator=Operator
@@ -64,12 +62,11 @@ avgustBel=AvgustBel
 backBtn=Back
 client.registration.sameCarNumber=ATTENTION!!! CHECK INPUT DATA. Client with reg. car number {0} already in the queue
 client.registration.success=Client with reg. car number "{0}" has been registered successfully!!!
-client.registration.emptyFields=ATTENTION!!! Check input data
-order.isFound=Order "{0}" is found
-order.isNotFound=Order "{0}" is not found. Please contact the sales service
 operator.stockN=Stock #
 operator.rampN=Ramp #
 operator.selectStock=Select the stock
 operator.selectRamp=Select the ramp
 exception.dbError=DATABASE ERROR!!! ACTION ISN'T COMPLETED
-client.maxClientCountInQueque=Max count of called clients - 4
+client.company=Company
+client.maxCalledClientCountInQueque=Max count of called clients - 4
+operator.trControl.enterBtn=Entered
