--- a/src/main/resources/locales/mes.properties
+++ b/src/main/resources/locales/mes.properties
@@ -12,7 +12,7 @@ clientIndex.downloading=Загрузка
 client.uploading.title=Страница регистрации обслуживания по «Разгрузке»
 client.carNumber=Гос. номер автомобиля
 client.phoneNumber=Номер телефона
-client.orderNumber=Номер заказа
+client.company=Компания
 client.registrationBtn = Зарегистрироваться
 client.backToOperationSelBtn = Назад к выбору операции
 
@@ -46,6 +46,7 @@ operator.trControl.callBtn = Вызвать
 operator.trControl.arrivedBtn = Прибыл
 operator.trControl.servedBtn = Обслужен
 operator.trControl.returnBtn = Возврат
+operator.trControl.enterBtn = Въехал
 
 client.isFoundInDb = Клиент "{0}" находится в очереди
 client.isNOTFoundInDb = Клиента "{0}" НЕT в очереди!
@@ -69,11 +70,10 @@ dataOperation.from = C:
 dataOperation.to = По:
 dataOperation.uploadBtn = Выгрузить
 
-login.error = Неверное имя пользователи или пароль!
-login.logoutSuccess = Выход осуществлен успешно.
+login.error = ОШИБКА! Неверное имя пользователи или пароль!
+login.logoutSuccess = Выход осуществлен успешно!
 
 order.success = Данные загружены УСПЕШНО!
-order.unsuccess = Файл не загружен! тип файла может быть .xls либо .xlsx
 order.error = Ошибка! Данные не загружены
 
 client = Клиент
@@ -81,18 +81,14 @@ operator = Оператор
 avgustBel=АвгустБел
 backBtn=Назад
 
-client.registration.emptyFields = ВНИМАНИЕ!!! Проверьте введенные данные
-client.registration.sameCarNumber = ВНИМАНИЕ!!! ПРОВЕРЬТЕ ВВЕДЕННЫЕ ДАННЫЕ. Клиент с рег. номером {0} уже находится в очереди
+client.registration.sameCarNumber = ВНИМАНИЕ!!! ПРОВЕРЬТЕ ВВЕДЕННЫЕ ДАННЫЕ. Клиент с рег. номером "{0}" уже находится в очереди
 client.registration.success = Клиент с рег. номером "{0}" зарегестрирован успешно!!!
-
-order.isFound = Заказ "{0}" сформирован
-order.isNotFound = Заказ "{0}" не найден. Обратитесь в службу сбыта
 
 operator.stockN = Склад №
 operator.rampN = Рампа №
 operator.selectStock = Выберите склад
 operator.selectRamp = Выберите рампу
+
 exception.dbError=ОШИБКА БАЗЫ ДАННЫХ!!! ОПЕРАЦИЯ НЕ ВЫПОЛНЕНА
 
 client.maxCalledClientCountInQueque = Максимальное количесво одновременно вызываемых клиентов - 4
-client.maxClientCountInQueque=Максимальное количесво одновременно вызываемых клиентов - 4
