--- a/src/main/resources/locales/mes.properties
+++ b/src/main/resources/locales/mes.properties
@@ -29,9 +29,11 @@ operator.downloadBtn = Загрузить
 
 operator.trControlTable.regTime = Регистрация
 operator.trControlTable.callTime = Вызов
+operator.trControlTable.enterTime = Въезд
 operator.trControlTable.arriveTime = Прибытие
 operator.trControlTable.servedTime = Обслужен
 operator.trControlTable.returnTime = Возврат
+operator.trControlTable.leaveTime = Выезд
 
 operator.trControlTable.destination = Назначение
 operator.trControlTable.carRegN = № автомобиля
@@ -47,12 +49,17 @@ operator.trControl.arrivedBtn = Прибыл
 operator.trControl.servedBtn = Обслужен
 operator.trControl.returnBtn = Возврат
 operator.trControl.enterBtn = Въехал
+operator.trControl.leaveBtn = Выехал
 
 client.isFoundInDb = Клиент "{0}" находится в очереди
 client.isNOTFoundInDb = Клиента "{0}" НЕT в очереди!
 client.isCalled = Клиент "{0}" вызван
 client.isNOTCalled = ОШИБКА БД! Клиент "{0}" не вызван
 client.isArrived = Клиент "{0}" прибыл
+client.isEntered = Клиент "{0}" въехал
+client.isNOTEntered = ОШИБКА БД! Клиент "{0}" НЕ въехал
+client.isLeaved = Клиент "{0}" выехал
+client.isNOTLeaved = ОШИБКА БД! Клиент "{0}" НЕ выехал
 client.isNOTArrived = ОШИБКА БД! Клиент "{0}" НЕ прибыл
 client.isServed = Клиент "{0}" обслужен
 client.isNOTServed = Ошибка БД! Клиент "{0}" НЕ обслужен
