--- a/src/main/resources/locales/mes_en.properties
+++ b/src/main/resources/locales/mes_en.properties
@@ -70,3 +70,10 @@ exception.dbError=DATABASE ERROR!!! ACTION ISN'T COMPLETED
 client.company=Company
 client.maxCalledClientCountInQueque=Max count of called clients - 4
 operator.trControl.enterBtn=Entered
+operator.trControl.leaveBtn=Leave
+client.isEntered=Client "{0}" is entered
+client.isLeaved=Client "{0}" is leaved
+client.isNOTEntered=DB ERROR! Client "{0}" is NOT entered
+client.isNOTLeaved=DB ERROR! Client "{0}" is NOT leaved
+operator.trControlTable.enterTime=Enter
+operator.trControlTable.leaveTime=Leave
