--- a/src/main/resources/locales/mes_ru.properties
+++ b/src/main/resources/locales/mes_ru.properties
@@ -70,3 +70,10 @@ exception.dbError=ОШИБКА БАЗЫ ДАННЫХ!!! ОПЕРАЦИЯ НЕ В
 client.company=Компания
 client.maxCalledClientCountInQueque=Максимальное количесво одновременно вызываемых клиентов - 4
 operator.trControl.enterBtn=Въехал
+operator.trControl.leaveBtn=Выехал
+client.isEntered=Клиент "{0}" въехал
+client.isLeaved=Клиент "{0}" выехал
+client.isNOTEntered=ОШИБКА БД! Клиент "{0}" НЕ въехал
+client.isNOTLeaved=ОШИБКА БД! Клиент "{0}" НЕ выехал
+operator.trControlTable.enterTime=Въезд
+operator.trControlTable.leaveTime=Выезд
