--- a/src/main/resources/locales/mes.properties
+++ b/src/main/resources/locales/mes.properties
@@ -1,32 +1,21 @@
 enterBtn=Вход
 exitBtn=Выход
-
 login.title=Авторизация
 login.username=Пользователь
 login.password=Пароль
-
 clientIndex.title=Выбор операции клиентом
 clientIndex.uploading=Разгрузка
 clientIndex.downloading=Загрузка
-
 client.uploading.title=Страница регистрации обслуживания по «Разгрузке»
 client.carNumber=Гос. номер автомобиля
 client.phoneNumber=Номер телефона
 client.company=Компания
 client.registrationBtn = Зарегистрироваться
 client.backToOperationSelBtn = Назад к выбору операции
-
 client.downloading.title=Страница регистрации обслуживания по «Загрузке»
-
-
 operatorIndex.title=Выбор операции оператором
 operatorIndex.transportControl = Управление транспортом
 operatorIndex.dataOperations = Операции с данными
-
-operator.fileToDownload = Файл для загрузки:
-operator.downloadBtn = Загрузить
-
-
 operator.trControlTable.regTime = Регистрация
 operator.trControlTable.callTime = Вызов
 operator.trControlTable.enterTime = Въезд
@@ -34,23 +23,18 @@ operator.trControlTable.arriveTime = Прибытие
 operator.trControlTable.servedTime = Обслужен
 operator.trControlTable.returnTime = Возврат
 operator.trControlTable.leaveTime = Выезд
-
 operator.trControlTable.destination = Назначение
 operator.trControlTable.carRegN = № автомобиля
 operator.trControlTable.phoneN =  № телефона
-operator.trControl.orderN = № заказа
 operator.trControl.stock = Склад
 operator.trControl.ramp = Рампа
 operator.trControlTable.state = Состояние
-
-
 operator.trControl.callBtn = Вызвать
 operator.trControl.arrivedBtn = Прибыл
 operator.trControl.servedBtn = Обслужен
 operator.trControl.returnBtn = Возврат
 operator.trControl.enterBtn = Въехал
 operator.trControl.leaveBtn = Выехал
-
 client.isFoundInDb = Клиент "{0}" находится в очереди
 client.isNOTFoundInDb = Клиента "{0}" НЕT в очереди!
 client.isCalled = Клиент "{0}" вызван
@@ -65,37 +49,64 @@ client.isServed = Клиент "{0}" обслужен
 client.isNOTServed = Ошибка БД! Клиент "{0}" НЕ обслужен
 client.isReturned = Клиент "{0}" возвращен и помещен в конец очереди
 client.isNOTReturned = Ошибка БД! Клиент "{0}" не возвращен
-
 client.queue = Очередь клиентов: текущее количество клиентов - 
 footer.text=АвгустБел
-
-dataOperation.dataDownloading = Загрузка данных
 dataOperation.dataUploading = Выгрузка данных
-dataOperation.browse = Выбор файла
 dataOperation.message = Сообщение:
 dataOperation.from = C:
 dataOperation.to = По:
 dataOperation.uploadBtn = Выгрузить
-
 login.error = ОШИБКА! Неверное имя пользователи или пароль!
 login.logoutSuccess = Выход осуществлен успешно!
-
 order.success = Данные загружены УСПЕШНО!
 order.error = Ошибка! Данные не загружены
-
 client = Клиент
 operator = Оператор
 avgustBel=АвгустБел
 backBtn=Назад
-
 client.registration.sameCarNumber = ВНИМАНИЕ!!! ПРОВЕРЬТЕ ВВЕДЕННЫЕ ДАННЫЕ. Клиент с рег. номером "{0}" уже находится в очереди
 client.registration.success = Клиент с рег. номером "{0}" зарегестрирован успешно!!!
-
 operator.stockN = Склад №
 operator.rampN = Рампа №
 operator.selectStock = Выберите склад
 operator.selectRamp = Выберите рампу
-
 exception.dbError=ОШИБКА БАЗЫ ДАННЫХ!!! ОПЕРАЦИЯ НЕ ВЫПОЛНЕНА
-
 client.maxCalledClientCountInQueque = Максимальное количесво одновременно вызываемых клиентов - 4
+userManagement.title=Управление пользователями
+userManagement=Управление Пользователем
+userManagement.addNewUserBtn=Добавить Нового пользователя
+userManagement.roles=Роли
+userManagement.role.admin=АДМИНИСТРАТОР
+userManagement.role.security=ОХРАНА
+userManagement.role.operator_load=ОПЕРАТОР(ЗАГРУЗКА)
+userManagement.role.operator_unload=ОПЕРАТОР(РАЗГРУЗКА)
+userManag.AddUser.ok=добавлен успешно
+userManag.AddUser.error=не добавлен. ОШИБКА!
+userManag.AddUser.alreadyExists=уже зарегистрирован
+userManag.verific.userName=Имя пользователя должно быть более 2 символов
+userManag.verefic.pass=Пароль должен быть более 4 символов
+userManagement.deleteUserBtn=Удалить выбранного пользовалеля
+userManagement.modifyUserBtn=Изменить выбранного пользователя
+userManag.DeleteUser.ok=удален успешно
+userManag.DeleteUser.error=не удален. Ошибка!
+userManag.DeleteUser.noSuchUser=нет в базе данных
+userManag.ModifyUser.ok=изменен успешно
+userManag.ModifyUser.error=не изменен. Ошибка!
+userManag.action=Действие
+userManag.newUser="НОВЫЙ ПОЛЬЗОВАТЕЛЬ"
+userManag.selectUserTitle=Выберите Пользователя
+login.password_repeat=Повторите пароль
+userManag.adminCanNotBeDeleted=Администратор не может быть удален
+userManag.verefic.pass_passRepeat=Пароли не совпадают
+userManag.adminCanNotBeRenamed=Администратор не может быть переименовон
+client.companyField.verific=Поле "Компания" может содержать буквы,цыфры,-,№,_ пробел
+userManag.atLeastOneRoleMustBe=Проверьте роли. Мин кол-во ролей - 1
+userManag.adminMustHaveRoleAdmin=Администратор по крайней мере должен иметь роль "Администратор"
+client.error.companyInput=Поле "Компания" может содержать буквы,цифры, а так же символы: тире "-",номер "№" или "#",нижнее подчеркивание "_" и пробел " ";
+client.error.carInput=Поле "Номер автомобиля" может содержать буквы,цифры и тире "-";
+client.error.phoneNumber=Поле "Номер телефона" может содержать цифры, а так же символы: плюс "+" и тире "-";
+client.error.checkInputData=Проверьте введенные данные.
+client.error.phoneAndCarRequired=ВНИМАНИЕ!!! Клиент не зарегестрирован.\n "Номер автомобиля" и "Номер телефона" обязательные поля для заполнения;
+client.error.companyPhoneAndCarRequired=ВНИМАНИЕ!!! Клиент не зарегестрирован.\n"Компания", "Номер автомобиля" и "Номер телефона" обязательные поля для заполнения;
+client.confirmation=Вы действительно хотите зарегестрироваться со следующими данными:
+
