--- a/src/main/resources/locales/mes_en.properties
+++ b/src/main/resources/locales/mes_en.properties
@@ -4,23 +4,20 @@ login.password=Password
 exitBtn=Exit
 enterBtn=Enter
 clientIndex.title=Selection of operation by client
-clientIndex.uploading=Uploading
-clientIndex.downloading=Downloading
+clientIndex.uploading=Unloading
+clientIndex.downloading=Loading
 client.uploading.title="Unloading" service registration page
 client.carNumber=Car registration number
 client.phoneNumber=Phone number
 client.registrationBtn=Registration
 client.backToOperationSelBtn=Back to operation selection 
-client.downloading.title="Downloading" service registration page
+client.downloading.title="Loading" service registration page
 operatorIndex.title=Selection of destination by operator
 operatorIndex.transportControl=Transport control
 operatorIndex.dataOperations=Data operations
-operator.fileToDownload=File to download:
-operator.downloadBtn=Download
 operator.trControlTable.state=State
 operator.trControl.ramp=Ramp
 operator.trControl.stock=Stock
-operator.trControl.orderN=Order Number
 operator.trControlTable.phoneN=Phone Number
 operator.trControlTable.carRegN=Car Number
 operator.trControlTable.destination=Destination
@@ -45,9 +42,7 @@ client.isReturned=Client "{0}" is returned and placed in the end of queue
 client.isNOTReturned=DB ERROR! Client "{0}" is NOT returned
 client.queue=Clients queue: the current number of clients is - 
 footer.text=AvgustBel
-dataOperation.dataDownloading=Data dowloading
-dataOperation.dataUploading=Data uploading
-dataOperation.browse=Browse
+dataOperation.dataUploading=Data unloading
 dataOperation.message=Message:
 dataOperation.from=From:
 dataOperation.to=To:
@@ -77,3 +72,40 @@ client.isNOTEntered=DB ERROR! Client "{0}" is NOT entered
 client.isNOTLeaved=DB ERROR! Client "{0}" is NOT leaved
 operator.trControlTable.enterTime=Enter
 operator.trControlTable.leaveTime=Leave
+userManagement.title=Users Management
+userManagement=User Management
+userManagement.addNewUserBtn=Add New User 
+userManagement.roles=Roles
+userManagement.role.admin=ADMIN
+userManagement.role.security=SECURITY
+userManagement.role.operator_load=OPERATOR(LOAD)
+userManagement.role.operator_unload=OPERATOR(UNLOAD)
+userManag.AddUser.ok=was added successfully
+userManag.AddUser.error=wasn't added. Error!
+userManag.AddUser.alreadyExists=is already registered
+userManag.verific.userName=User name must be greater than 2 symbols
+userManag.verefic.pass=Password must be greater than 4 symbols
+userManagement.deleteUserBtn=Delete selected user
+userManagement.modifyUserBtn=Modify selected user
+userManag.DeleteUser.ok=was deleted successfully
+userManag.DeleteUser.error=wasn't deleted. Error!
+userManag.DeleteUser.noSuchUser=no in data base
+userManag.ModifyUser.ok=was modified successfully
+userManag.ModifyUser.error=wasn't modified. Error!
+userManag.action=Action
+userManag.newUser="NEW USER"
+login.password_repeat=Repeat Password
+userManag.adminCanNotBeDeleted=Administrator Can't be deleted
+userManag.selectUserTitle=Select User
+userManag.verefic.pass_passRepeat=Passwords are not the same
+userManag.adminCanNotBeRenamed=Admin can't be ranamed
+client.companyField.verific="Company" field could consist from letters,numbers,-?,_ space
+userManag.atLeastOneRoleMustBe=Check the roles. Min quantity of roles - 1
+userManag.adminMustHaveRoleAdmin=Admin must have at least Role "Admin"
+client.error.companyInput=In Input Text "Company" can be writen only nubers, letters and followen symbols: dash "-",number "#" or "?",underscore "_" and space " ";
+client.error.carInput=In Input Text "Car Number" can be writen only nubers, letters and  dash symbol "-";
+client.error.phoneNumber=In Input Text "Phone Number" can be writen only nubers and symbols like dash "-" and plus "+";
+client.error.checkInputData=Please check input data.
+client.error.phoneAndCarRequired=Attention!!! Client wasn't registered. "Car number" and "Phone number" are required fields to fill
+client.error.companyPhoneAndCarRequired=Attention!!! Client wasn't registered.\n"Company", "Car number" and "Phone number" are required fields to fill;
+client.confirmation=Are you sure you want to register a client with following data:
